--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -101,12 +101,5 @@ jobs:
           # This should show the server is configured with a token.
           jf c show   
           jf c use jfrog-server
-      - name: Verify Authentication
-        env:
-          ACCESS_TOKEN: ${{ steps.exchange_token.outputs.ACCESS_TOKEN }} 
-          JF_URL: ${{ env.JF_URL }}
-        run: |
-          echo "Verifying authentication with JFrog..."
-          jf rt ping --server-id jfrog-server
-          echo "Attempting to retrieve configuration for target repository: ${{ env.MODULE_REPO_KEY }}"
-          jf rt curl -XGET "/api/repositories/${{ env.MODULE_REPO_KEY }}" --server-id jfrog-server  
+          jf rt curl -XGET "/api/repositories/manu-terra-virtual" --server-id jfrog-server 
+     
