--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -101,5 +101,6 @@ jobs:
           # This should show the server is configured with a token.
           jf c show   
           jf c use jfrog-server
-          jf rt curl -XGET "/api/repositories/manu-terra-virtual" --server-id jfrog-server 
+          jf rt ping
+          jf rt curl -XGET "/api/repositories/manu-terra-virtual" 
      
